# libanvil

./: CMakeLists.txt
cmake/: anvilConfig.cmake  anvil_cppConfig.cmake
cmd/: main.cpp
include/anvil_cpp/: anvil.hpp
